[project]
name = "pdf-devide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.6"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "pypdf>=6.1.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
